--- a/src/client/src/app/nav/nav.component.scss
+++ b/src/client/src/app/nav/nav.component.scss
@@ -30,6 +30,11 @@
     color: #666666;
 }
 
+.app-authName-card{
+    background-color: #666666;
+    color: rgb(255, 255, 255);
+    height: 0.3em;
+}
 
 .h1-app{
     font-size: 1.3em;
