Impressum & Kontakt: routen hinzugefuegt, Anmelden & Registrieren: box um text leicht vergroessert

--- a/src/client/src/app/nav/nav.component.html
+++ b/src/client/src/app/nav/nav.component.html
@@ -74,7 +74,7 @@
       <a *ngIf="authUserId">
         <hr class="hr-menu">
         <div class="card-body btn-lg app-authName-card d-flex align-items-center ">
-            Hallo, {{authUserName}}
+          {{authUserName}}
         </div>
       </a>
 
