--- a/src/client/src/app/pages/anmelden/anmelden.component.html
+++ b/src/client/src/app/pages/anmelden/anmelden.component.html
@@ -8,7 +8,7 @@
           <span class="span-anmelden input-group-text" id="inputGroup-sizing-default">Name:</span>
         </div>
         <!--<input type="text" class="input-anmelden form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">-->
-        <input type="text" class="input-anmelden form-control" placeholder="Benutzername" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">
+        <input type="text" class="input-anmelden form-control" aria-describedby="basic-addon1" [formControl]="name" (keyup.enter)="onSubmit()">
       </div> 
     </div>
 
@@ -17,7 +17,7 @@
         <div class="input-group-prepend">
           <span class="span-anmelden input-group-text" id="inputGroup-sizing-default">Passwort:</span>
         </div>
-        <input type="password" class="input-anmelden form-control" placeholder="Geheimes Passwort" aria-describedby="basic-addon1" [formControl]="password" (keyup.enter)="onSubmit()"> 
+        <input type="password" class="input-anmelden form-control" aria-describedby="basic-addon1" [formControl]="password" (keyup.enter)="onSubmit()"> 
       </div>
     </div>
   </div>
@@ -36,8 +36,11 @@
 <div class="d-flex justify-content-center mt-3">
   <div class="d-flex flex-column">
     <div class="flex-row p-2 d-flex justify-content-center">
-      <button class="btn btn-outline-secondary" (click)="onSubmit()">
+      <button class="btn btn-outline-secondary" (click)="onSubmit()" type="submit">
         Anmelden
+        <div *ngIf>
+
+        </div>
       </button> 
     </div>
   </div>
