Neue Filterkomponenten erstellt um Filtertypen auswählen zu können. Erweiterte Suche Seite verändert.

--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -22,7 +22,7 @@
           <h2>Preis in €: {{auto.price}}</h2>
 
           <hr>
-          <!--Bewertungen
+          <!--Bewertungen  -->
           <p>Bewertungen: <b>{{currentRate}}</b></p>
           <ngb-rating [(rate)]="currentRate" max="5">
             <ng-template let-fill="fill" let-index="index">
@@ -32,7 +32,7 @@
           <hr>
           <p class="text-center"><a href="#" class="btn btn-success" role="button">Details</a></p>
 
-        -->
+          <p>&nbsp;</p>
 
         </div>
       </div>
