--- a/src/client/src/app/pages/main/main.component.html
+++ b/src/client/src/app/pages/main/main.component.html
@@ -58,21 +58,6 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<!--Filter
-<div class="container">
-  <div class="row" *ngIf="filters">
-    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center" *ngFor="let filter of filters">
-      <div ngbDropdown class="d-inline-block">
-        <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{filter.name}}</button>
-        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-          <button class="dropdown-item" *ngFor="let item of filter.data">{{item}}</button>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
--->
-
 
 <div class="container">
   <div class="row" *ngIf="filters">
@@ -111,27 +96,6 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-
-<!--
-<div class="container">
-  <div class="row" *ngIf="filters">
-    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center" *ngFor="let filter of filters">
-      <div ngbDropdown class="d-inline-block">
-
-
-          <select  name="suche" [(ngModel)]="suche" (change)="onChange(filter.id, suche)">
-            < !-- Inhalte für Hersteller, Erscheinungsjahr und Preis -- >
-            <option *ngFor="let item of filter.data" value={{item}} >
-              {{item}}
-            </option>
-          </select>
-
-        </div>
-     </div>0
-    </div>
-  </div>
--->
-
 <!-- Suchen Button -->
 <div class="container">
   <div class="row">
@@ -147,10 +111,13 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12 text-center">
-      <button type="button" onclick="location.href='/erweitertesuche';" class="btn btn-secondary">Erweiterte Suche</button>
+      <button type="button" routerLink="/erweitertesuche" class="btn btn-secondary">Erweiterte Suche</button>
     </div>
   </div>
 </div>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 <div *ngIf="filteredAutos">
   <app-autos [autos]="filteredAutos"></app-autos>
