--- a/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.html
+++ b/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.html
@@ -1,4 +1,6 @@
 <div class="slidecontainer" *ngIf="schieberegler">
   <h2>Slider für: {{schieberegler.name}}</h2>
   <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
+
+  <p>&nbsp;</p>
 </div>
