--- a/src/client/src/app/pages/filterkomponenten/zahleingabe/zahleingabe.component.html
+++ b/src/client/src/app/pages/filterkomponenten/zahleingabe/zahleingabe.component.html
@@ -1,8 +1,7 @@
-
-<div  ng-app ng-controller="formCtrl" *ngIf="zahleingabe">
+<div ng-app ng-controller="formCtrl" *ngIf="zahleingabe">
   <form name="myForm" ng-submit="onSubmit()">
     <h2>Eingabefeld für: {{zahleingabe.name}}</h2>
     <input class="but" type="number">
-
   </form>
+  <p>&nbsp;</p>
 </div>
