--- a/src/client/src/app/pages/erweitertesuche/erweitertesuche.component.html
+++ b/src/client/src/app/pages/erweitertesuche/erweitertesuche.component.html
@@ -8,24 +8,33 @@
 <div class="container">
   <div class="row" *ngIf="filters">
 
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" *ngFor="let filter of filters">
-      <app-checkbox [checkbox]="filter"></app-checkbox>
-    </div>
+    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" *ngFor="let filter of filters" [ngSwitch]="filter.type">
 
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" *ngFor="let filter of filters">
-      <app-dropdown [dropdown]="filter"></app-dropdown>
-    </div>
+      <div *ngSwitchCase="1">
+        <app-dropdown *ngSwitchCase="1" [dropdown]="filter"></app-dropdown>
+      </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" *ngFor="let filter of filters">
-      <app-schieberegler [schieberegler]="filter"></app-schieberegler>
-    </div>
 
-    <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12" *ngFor="let filter of filters">
-      <app-zahleingabe [zahleingabe]="filter"></app-zahleingabe>
+      <div *ngSwitchCase="2">
+        <app-checkbox [checkbox]="filter"></app-checkbox>
+      </div>
 
+
+      <div *ngSwitchCase="3">
+        <app-schieberegler *ngSwitchCase="3" [schieberegler]="filter"></app-schieberegler>
+      </div>
+
+      <div *ngSwitchCase="5">
+        <app-zahleingabe *ngSwitchCase="5" [zahleingabe]="filter"></app-zahleingabe>
+      </div>
+
+      <div *ngSwitchDefault>
+        <span>Kein bekannter Filter</span>
+      </div>
     </div>
   </div>
 </div>
+
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
