--- a/src/client/src/app/pages/filterkomponenten/checkbox/checkbox.component.html
+++ b/src/client/src/app/pages/filterkomponenten/checkbox/checkbox.component.html
@@ -1,6 +1,9 @@
 <div class="form-check" *ngIf="checkbox">
-  <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+
   <label class="form-check-label" for="defaultCheck1">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
     {{checkbox.name}}
   </label>
+
 </div>
+<p>&nbsp;</p>
