kontakt und impressum etwas gefuellt und kleinigkeiten bearbeitet

--- a/src/client/src/app/footbar/footbar.component.html
+++ b/src/client/src/app/footbar/footbar.component.html
@@ -1,10 +1,10 @@
 <div class="container mt-5 d-flex justify-content-center ">
   <div id="footer" class="push">
     <div class="d-flex justify-content-around pt-1">
-      <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+      <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button" routerLink="/kontakt">
         Kontakt
       </button>
-      <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button">
+      <button type="button" class="btn btn-outline-secondary menu-button-border menu-web-text menu-web-button" routerLink="/impressum">
         Impressum
       </button>
     </div>
