--- a/src/client/src/app/pages/registrieren/registrieren.component.html
+++ b/src/client/src/app/pages/registrieren/registrieren.component.html
@@ -5,9 +5,9 @@
     <div class="flex-row p-3">
       <div class="input-group">
         <div class="input-group-prepend">
-          <span class="span-regist input-group-text" id="inputGroup-sizing-default">Name:</span>
+          <span class="span-regist input-group-text" id="inputGroup-sizing-default">Benutzername:</span>
         </div>
-        <input type="text" class="input-regist form-control" placeholder="Username" aria-describedby="basic-addon1" [formControl]="benutzername" (keyup.enter)="onSubmit()">
+        <input type="text" class="input-regist form-control" aria-describedby="basic-addon1" [formControl]="benutzername" (keyup.enter)="onSubmit()">
       </div> 
     </div>
 
