--- a/src/client/src/app/pages/impressum/impressum.component.html
+++ b/src/client/src/app/pages/impressum/impressum.component.html
@@ -1,10 +1,32 @@
-<h1>
-  Impressum
-</h1>
-<p class="pb-3 pl-3 stand">
-  Stand 01.01.2019
-</p>
+<div class="ml-5 mt-4 text-size">
+  <div class="d-flex flex-column">
+    <div class="flex-row pb-3">
+      <h1>
+        Impressum
+      </h1>
+    </div>
+    <div class="flex-row pb-5">
+      <p class="stand">
+        Stand {{standDatum}}
+      </p>
+    </div>
+    <div class="flex-row pb-3">
+      <h2>
+        Driving-E-Car
+      </h2>
+    </div>
+    <div class="flex-row pb-3">
+      <p>
+        TH Köln         <br>
+        Claudiusstr. 1  <br>
+        50678 Köln      <br>
+      </p>
+    </div>
+    <div class="flex-row pb-2">
+      <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+      </p>
+    </div>
 
-<p>
-  Driving-E-Car
-</p>
+  </div>
+</div>
