--- a/src/client/src/app/pages/kontakt/kontakt.component.html
+++ b/src/client/src/app/pages/kontakt/kontakt.component.html
@@ -1,3 +1,32 @@
-<p>
-  kontakt works!
-</p>
+<div class="ml-5 mt-4 text-size">
+  <div class="d-flex flex-column">
+    <div class="flex-row pb-3">
+      <h1>
+        Kontakt
+      </h1>
+    </div>
+    <div class="flex-row pb-3">
+      <h2>
+        beispiel@email.de
+      </h2>
+    </div>
+    <div class="flex-row pb-3">
+      <p>
+        TH Köln         <br>
+        Claudiusstr. 1  <br>
+        50678 Köln      <br>
+      </p>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2514.4036765610426!2d6.985852751142395!3d50.93474721013096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bf25d6d4b25ded%3A0x93da676cc785abce!2sTH+K%C3%B6ln+Campus+Deutz!5e0!3m2!1sde!2sde!4v1547055004909" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div class="flex-row pb-2">
+      <p>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <br>
+        At vero eos et accusam et justo duo dolores et ea rebum. <br>
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. <br>
+        Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. <br>
+        At vero eos et accusam et justo duo dolores et ea rebum. <br>
+        Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.<br>
+      </p>
+    </div>
+  </div>
+</div>
