erweiterte Suche Frontend + tooltip

--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -10,8 +10,11 @@
         <hr>
 
         <div class="caption">
-          <div style="width: 100%;   margin: fill;">
-            <h1 > <abbr>{{auto.modelname}} </abbr> </h1>
+          <div style="width: 100%; margin: fill;">
+            <div class="mytooltip">
+              <h1><abbr>{{auto.modelname}}</abbr></h1>
+              <span class="tooltiptext">{{auto.modelname}}</span>
+            </div>
           </div>
         </div>
 
