--- a/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.html
+++ b/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.html
@@ -1,6 +1,8 @@
 <div class="slidecontainer" *ngIf="schieberegler">
   <h2>Slider für: {{schieberegler.name}}</h2>
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange">
-
+  <input id="myRange" class="slider" type="range"
+    min="{{schieberegler['data'][0].value}}"
+    max="{{schieberegler['data'][schieberegler['data'].length - 1].value}}"
+    (input)="onChange(schieberegler.id, $event.target.value)">
   <p>&nbsp;</p>
 </div>
