--- a/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.html
+++ b/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.html
@@ -1,8 +1,9 @@
 <div class="slidecontainer" *ngIf="schieberegler">
-  <h2>Slider für: {{schieberegler.name}}</h2>
-  <input id="myRange" class="slider" type="range"
+  <h2>{{schieberegler.name}} [{{value}}]</h2>
+  <input id="range_{{schieberegler.id}}" class="slider" type="range"
     min="{{schieberegler['data'][0].value}}"
     max="{{schieberegler['data'][schieberegler['data'].length - 1].value}}"
+    value="{{value}}"
     (input)="onChange(schieberegler.id, $event.target.value)">
   <p>&nbsp;</p>
 </div>
