--- a/src/client/src/app/pages/filterkomponenten/zahleingabe/zahleingabe.component.html
+++ b/src/client/src/app/pages/filterkomponenten/zahleingabe/zahleingabe.component.html
@@ -1,6 +1,9 @@
 <div ng-app ng-controller="formCtrl" *ngIf="zahleingabe">
-  <form name="myForm" ng-submit="onSubmit()">
-    <input class="but" type="number" placeholder="{{zahleingabe.name}} (input)="onChange(zahleingabe.id, $event.target.value)">
-  </form>
+  <div class="mytooltip">
+    <input id="number_{{zahleingabe.id}}" class="but" type="number"
+      placeholder="{{zahleingabe.name}}"
+      (input)="onChange(zahleingabe.id, $event.target.value)">
+    <span *ngIf="userFilter[zahleingabe.id]" class="tooltiptext">{{zahleingabe.name}}</span>
+  </div>
   <p>&nbsp;</p>
 </div>
