--- a/src/client/src/app/pages/filterkomponenten/zahleingabe/zahleingabe.component.scss
+++ b/src/client/src/app/pages/filterkomponenten/zahleingabe/zahleingabe.component.scss
@@ -2,3 +2,27 @@
   width: 100%;
   height: 90%;
 }
+
+.mytooltip {
+  position: relative;
+
+  .tooltiptext {
+    visibility: hidden;
+    width: 100%;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    bottom: 100%;  // At the top of the tooltip
+    left: 0%;
+
+    // Position the tooltip
+    position: absolute;
+    z-index: 1;
+  }
+
+  &:hover .tooltiptext {
+    visibility: visible;
+  }
+}
