Auto detailsseite hinzugefügt. Bilderkarusell auf Haupseite geändert. Details Button auf der Autos Seite geändert.

--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -33,7 +33,7 @@
             </ng-template>
           </ngb-rating>
           <hr>
-          <p class="text-center"><a href="#" class="btn btn-success" role="button">Details</a></p>
+          <p class="text-center"><a href="/detailsansicht/{{auto.id}}" class="btn btn-success" role="button">Details</a></p>
 
           <p>&nbsp;</p>
 
