--- a/src/client/src/app/pages/main/main.component.scss
+++ b/src/client/src/app/pages/main/main.component.scss
@@ -14,13 +14,14 @@ img {
   height: 100%;
   width: 100%;
   object-fit: cover;
+
 }
 
 .img-container {
   padding: 10px;
   float: left;
   width: 33.33%;
-  height: 100%;
+  height: 200px;
 }
 
 .but {
