--- a/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.scss
+++ b/src/client/src/app/pages/filterkomponenten/schieberegler/schieberegler.component.scss
@@ -1,6 +1,7 @@
 .slider {
   -webkit-appearance: none;
-  width: 100%;
+  width: 75%;
+  margin-right: 5%;
   height: 15px;
   border-radius: 5px;
   background: #d3d3d3;
@@ -26,4 +27,9 @@
   border-radius: 50%;
   background: #4CAF50;
   cursor: pointer;
+}
+
+.btn-reset {
+  width: 20%;
+  font-size: 0.8em;
 }
