--- a/src/client/src/app/pages/main/main.component.html
+++ b/src/client/src/app/pages/main/main.component.html
@@ -8,24 +8,45 @@
   </div>
 
   <!--Bilderkarussell -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12">
-        <ngb-carousel *ngIf="carouselAutos">
-          <ng-container *ngFor="let auto of carouselAutos; let i = index">
-            <ng-template ngbSlide *ngIf="i % 3 === 0">
-              <ng-container *ngFor="let subIndex of [ 0, 1, 2 ]">
-                <div *ngIf="carouselAutos[i+subIndex]" class="col-xs-4 img-container">
-                  <a routerLink="/autos/{{carouselAutos[i+subIndex].id}}">
-                    <img class="img-responsive" src="{{carouselAutos[i+subIndex].image}}">
-                  </a>
-                </div>
-              </ng-container>
-            </ng-template>
-          </ng-container>
-        </ngb-carousel>
+  <div class="d-none d-sm-block">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <ngb-carousel *ngIf="carouselAutos">
+            <ng-container *ngFor="let auto of carouselAutos; let i = index">
+              <ng-template ngbSlide *ngIf="i % 3 === 0">
+                <ng-container *ngFor="let subIndex of [ 0, 1, 2 ]">
+                  <div *ngIf="carouselAutos[i+subIndex]" class="col-xs-4 img-container">
+                    <a routerLink="/auto/{{carouselAutos[i+subIndex].id}}">
+                      <img class="img-responsive" src="{{carouselAutos[i+subIndex].image}}">
+                    </a>
+                  </div>
+                </ng-container>
+              </ng-template>
+            </ng-container>
+          </ngb-carousel>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="d-inline d-sm-none">
+      <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <ngb-carousel *ngIf="carouselAutos">
+                <ng-container *ngFor="let auto of carouselAutos">
+                  <ng-template ngbSlide>
+                    <div class="col-md-12 img-container-mobile">
+                      <a routerLink="/auto/{{auto.id}}">
+                        <img class="img-responsive" src="{{auto.image}}">
+                      </a>
+                    </div>
+                  </ng-template>
+                </ng-container>
+              </ngb-carousel>
+            </div>
+          </div>
+        </div>
   </div>
 </div>
 
