--- a/src/client/src/app/pages/main/main.component.scss
+++ b/src/client/src/app/pages/main/main.component.scss
@@ -23,6 +23,13 @@ img {
   height: 100%;
 }
 
+.img-container-mobile {
+  padding: 10px;
+  float: left;
+  max-width: 100%;
+  height: 250px;
+}
+
 .but {
   width: 100%;
   height: 90%;
