--- a/src/client/src/app/pages/autos/autos.component.html
+++ b/src/client/src/app/pages/autos/autos.component.html
@@ -4,7 +4,7 @@
 
       <div class="thumbnail text-center">
         <div class="img-container">
-          <img [src]="auto.image" class=" img-responsive" alt="Thumbnail Image {{auto.modelname}}">
+          <a routerLink="/auto/{{auto.id}}"> <img [src]="auto.image" class=" img-responsive" alt="Thumbnail Image {{auto.modelname}}"></a>
         </div>
 
         <hr>
@@ -12,7 +12,7 @@
         <div class="caption">
           <div style="width: 100%; margin: fill;">
             <div class="mytooltip">
-              <h1><abbr>{{auto.modelname}}</abbr></h1>
+              <a routerLink="/auto/{{auto.id}}">   <h1><abbr>{{auto.modelname}}</abbr></h1> </a>
               <span class="tooltiptext">{{auto.modelname}}</span>
             </div>
           </div>
