--- a/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
+++ b/src/client/src/app/pages/detailsansicht/detailsansicht.component.html
@@ -10,9 +10,9 @@
 
   <div class="row">
     <div class="col-lg-6">
-      <a href="#"> <img class="img-responsive"
+       <img class="img-responsive"
                         src="{{a.image}}"
-                        alt="..."> </a>
+                        alt="...">
     </div>
     <div class="col-lg-6">
       <p>&nbsp;</p>
