--- a/src/client/src/app/pages/registrieren/registrieren.component.html
+++ b/src/client/src/app/pages/registrieren/registrieren.component.html
@@ -57,7 +57,7 @@
     <button class="btn btn-outline-secondary mr-2" routerLink="/" >
       Hauptseite
     </button> 
-    <button class="btn btn-outline-secondary ml-2" routerLink="anmelden">
+    <button class="btn btn-outline-secondary ml-2" routerLink="/anmelden">
       Anmelden
     </button> 
   </div>
